fixed personal picture size, made showreel video 70% and fixed font-weight on ios 🔧

--- a/style_index.css
+++ b/style_index.css
@@ -54,22 +54,25 @@ nav {
 h1 {
   font-family: 'Julius Sans One', sans-serif;
   text-transform: uppercase;
-  margin: 0px 20px;
+  font-weight: normal;
+  margin: 0rem 1rem;
+  width: 14rem;
 }
 
 h1 > a {
   text-decoration: none;
   color: white;
+  width: 100%;
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 100%;
   text-decoration: none;
   white-space: nowrap;
 }
 
 .sub-title {
-  font-size: 0.85rem;
+  font-size: 56.5%;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -78,7 +81,7 @@ h1 > a {
   display: flex;
   list-style-type: none;
   justify-content: space-between;
-  margin: 15px 10px;
+  margin: 1rem 0.75rem;
 }
 
 .nav-button > a {
@@ -147,7 +150,7 @@ h1 > a {
 .showreel {
   display: flex;
   max-width: 100vw;
-  height: 75%;
+  height: 70%;
   width: fit-content;
 }
 
@@ -217,7 +220,7 @@ video {
 }
 
 .video > p {
-  margin: 12px 0px;
+  margin: 0.9rem 0rem;
 }
 
 .video:hover {
@@ -256,7 +259,7 @@ video {
 }
 
 .about-image {
-  width: 200px;
+  width: 12rem;
   border-radius: 50%;
   margin: 1.5rem 0rem;
 }
@@ -266,7 +269,6 @@ video {
   flex-direction: column;
   align-items: center;
   background-color: #505050;
-  padding: 1vw 0vw;
   padding-right: env(safe-area-inset-right);
   padding-left: env(safe-area-inset-left);
   padding-bottom: env(safe-area-inset-bottom); 
@@ -275,17 +277,16 @@ video {
 .contact-container > p {
   font-size: 0.8rem;
   color: white;
-  padding: 0.08vw 0vw;
   text-align: center;
   white-space: nowrap;
-  margin: 0px 10px;
+  margin: 0.8vh 0vw;
 }
 
 .social-buttons {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 1vw 0vw;
+  padding-top: 1vw;
 }
 
 .contact-button {
